--- a/app/components/students/studentView.html
+++ b/app/components/students/studentView.html
@@ -24,6 +24,7 @@
 					<th>First Name</th>
 					<th>Last Name</th>
 					<th>University</th>
+					<th>Degree</th>
 					<th>Program</th>
 				</thead>
 				<tr ng-repeat="(key, value) in students | filter: search" ng-click="goToId(value.firebaseId)">
@@ -31,6 +32,7 @@
 					<td>{{value.firstname}}</td>
 					<td>{{value.lastname}}</td>
 					<td>{{value.university}}</td>
+					<td>{{value.degree}}</td>
 					<td>{{value.program}}</td>
 				</tr>
 			</table>
