--- a/app/components/login/loginView.html
+++ b/app/components/login/loginView.html
@@ -1,6 +1,11 @@
 <!-- <p>Here coming from home.html</p>
 <a href="#/students">Go to all students</a> -->
 <div class="container">
+	<div class="row" style="padding-top: 20px">
+		<div class="col-md-10"><h3>This is the header</h3></div>
+		<div class="col-md-2" ng-click="login_fb()">Facebook login</div>
+	</div>
+	
 	<div class="row">
 		<form>
 			<div class="row">
