initial phase of login done

--- a/app/components/login/loginView.html
+++ b/app/components/login/loginView.html
@@ -1,12 +1,15 @@
 <!-- <p>Here coming from home.html</p>
 <a href="#/students">Go to all students</a> -->
 <div class="container">
-	<div class="row" style="padding-top: 20px">
-		<div class="col-md-10"><h3>This is the header</h3></div>
-		<div class="col-md-2" ng-click="login_fb()">Facebook login</div>
+	<div class="row" style="padding-top: 20px; margin: 0 auto">
+		<div class="col-md-10"><h3>Welcome to Scholar Strategy Review</h3></div>
 	</div>
 	
-	<div class="row">
+	<div class="row" style="padding-top: 20px; margin: auto 0">
+		<div class="col-md-2" ng-click="loginFb()"><button class="btn btn-primary">Fb login</button></div>
+		<div class="col-md-3" ng-click="login_signOut()"><button class="btn btn-danger">Sign Out</button></div>
+	</div>
+	<!-- <div class="row">
 		<form>
 			<div class="row">
 				<div class="form-group col-md-6">
@@ -30,5 +33,5 @@
 			</div>
 			<button type="submit" class="btn btn-primary col-md-2">Submit</button>
 		</form>
-	</div>
+	</div> -->
 </div>
