--- a/app/components/profile/profileView.html
+++ b/app/components/profile/profileView.html
@@ -2,25 +2,61 @@
 	<header><h1>This is the header</h1></header>
 
 	<h3>General Information</h3>
-	<div class="row" ng-repeat="item in general_list track by $index">
-		<div class=col-md-3>
-			<label>{{general_names[$index]}}</label>
+	<div class="row">
+		<div class="col-md-3">
+			<label>First Name</label>
 		</div>
-		<div class=col-md-9>
-			<input type="textarea" name="{{item}}" ng-model="student[item]" disabled>
+		<div class="col-md-9">
+			<input type="text" name="{{firstname}}" ng-model="user['firstname']" disabled>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-3">
+			<label>Last Name</label>
+		</div>
+		<div class="col-md-9">
+			<input type="text" name="{{lastname}}" ng-model="user['lastname']" disabled>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-3">
+			<label>University</label>
+		</div>
+		<div class="col-md-9">
+			<input type="text" name="{{university}}" ng-model="user['university']">
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-3">
+			<label>Degree</label>
+		</div>
+		<div class="col-md-9">
+			<select ng-model="user['degree']">
+				<option ng-repeat="degree in degrees">{{degree}}</option>
+			</select>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-3">
+			<label>Program</label>
+		</div>
+		<div class="col-md-9">
+			<select ng-model="user['program']">
+				<option ng-repeat="program in programs">{{program}}</option>
+			</select>
 		</div>
 	</div>
 	<hr>
 
-	<h3>Education</h3>
+	<!-- <h3>Education</h3>
 	<div class="row" ng-repeat="item in general_list track by $index">
 		<div class=col-md-3>
 			<label>{{general_names[$index]}}</label>
 		</div>
 		<div class=col-md-9>
-			<input type="textarea" name="{{item}}" ng-model="student[item]" disabled>
+			<input type="textarea" name="{{item}}" ng-model="user[item]" disabled>
 		</div>
-	</div>	
+	</div> -->	
 
 		
 	<footer>This is the footer</footer>
