--- a/app/components/students/studentView.html
+++ b/app/components/students/studentView.html
@@ -1,5 +1,9 @@
 <div class="container">
-	<header><h1>This is the header</h1></header>
+	<div class="row" style="padding-top: 20px">
+		<div class="col-md-10"><h3>Welcome to Scholar Strategy Review</h3></div>
+		<div class="col-md-1" ng-click="edit()"><button class="btn btn-primary">Edit Profile</button></div>
+		<div class="col-md-1" ng-click="student_signOut()"><button class="btn btn-danger">Sign Out</button></div>
+	</div>
 	<div class="row">
 		<h3>Search</h3>
 		<div class="col-md-4">
