star functionality added, students and profile page done with initial fields

--- a/app/components/profile/profileView.html
+++ b/app/components/profile/profileView.html
@@ -1,5 +1,10 @@
-<div class="container">
-	<header><h1>This is the header</h1></header>
+<div class="container" id="profile">
+	<div class="row" style="padding-top: 20px">
+		<div class="col-md-10"><h3>Welcome to Scholar Strategy Review</h3></div>
+		<div class="col-md-1" ng-click="change_show(true)" ng-hide="user.show"><button class="btn btn-primary">Show Profile</button></div>
+		<div class="col-md-1" ng-click="change_show(false)" ng-show="user.show"><button class="btn btn-warning">Hide Profile</button></div>
+		<div class="col-md-1" ng-click="profile_signOut()"><button class="btn btn-danger">Sign Out</button></div>
+	</div>
 
 	<h3>General Information</h3>
 	<div class="row">
@@ -10,6 +15,7 @@
 			<input type="text" name="{{firstname}}" ng-model="user['firstname']" disabled>
 		</div>
 	</div>
+	<br>
 	<div class="row">
 		<div class="col-md-3">
 			<label>Last Name</label>
@@ -18,6 +24,7 @@
 			<input type="text" name="{{lastname}}" ng-model="user['lastname']" disabled>
 		</div>
 	</div>
+	<br>
 	<div class="row">
 		<div class="col-md-3">
 			<label>University</label>
@@ -26,6 +33,7 @@
 			<input type="text" name="{{university}}" ng-model="user['university']">
 		</div>
 	</div>
+	<br>
 	<div class="row">
 		<div class="col-md-3">
 			<label>Degree</label>
@@ -36,6 +44,7 @@
 			</select>
 		</div>
 	</div>
+	<br>
 	<div class="row">
 		<div class="col-md-3">
 			<label>Program</label>
@@ -44,6 +53,50 @@
 			<select ng-model="user['program']">
 				<option ng-repeat="program in programs">{{program}}</option>
 			</select>
+		</div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-md-3">
+			<label>Year Joined</label>
+		</div>
+		<div class="col-md-9">
+			<select ng-model="user['year_joined']">
+				<option ng-repeat="year in years">{{year}}</option>
+			</select>
+		</div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-md-3">
+			<label>Year Graduted</label>
+		</div>
+		<div class="col-md-9">
+			<select ng-model="user['year_graduated']">
+				<option ng-repeat="year in years">{{year}}</option>
+			</select>
+		</div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-md-3">
+			<label>Star Rating</label>
+		</div>
+		<div class="col-md-9 my-rating-4"></div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-md-3">
+			<label>Review</label>
+		</div>
+		<div class="col-md-9">
+			<textarea rows="10" class="form-control" ng-model="user['review']"></textarea>
+		</div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-md-1 pull-right">
+			<button class="btn btn-primary" ng-click="save()">Save</button>
 		</div>
 	</div>
 	<hr>
@@ -60,4 +113,24 @@
 
 		
 	<footer>This is the footer</footer>
+	<script type="text/javascript">
+		function getStar(){
+			var scope = angular.element($("#profile")).scope();
+			$(".my-rating-4").starRating({
+			  totalStars: 5,
+			  emptyColor: 'lightgray',
+			  hoverColor: 'salmon',
+			  activeColor: 'salmon',
+			  disableAfterRate: false,
+			  initialRating: scope.user.rating,
+			  strokeWidth: 0,
+			  useGradient: false,
+			  callback: function(currentRating, $el){
+			    // alert('rated ' + currentRating);
+			    // console.log('DOM element ', $el);
+			    scope.user.rating = currentRating;
+			  }
+			});
+		}
+	</script>
 </div>
