--- a/app/components/students/studentView.html
+++ b/app/components/students/studentView.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="all_students">
 	<div class="row" style="padding-top: 20px">
 		<div class="col-md-10"><h3>Welcome to Scholar Strategy Review</h3></div>
 		<div class="col-md-1" ng-click="edit()"><button class="btn btn-primary">Edit Profile</button></div>
@@ -30,6 +30,9 @@
 					<th>University</th>
 					<th>Degree</th>
 					<th>Program</th>
+					<th>Joined</th>
+					<th>Graduate</th>
+					<th>Rating</th>
 				</thead>
 				<tr ng-repeat="(key, value) in students | filter: search" ng-click="goToId(value.firebaseId)">
 					<td>{{key + 1}}</td>
@@ -38,10 +41,30 @@
 					<td>{{value.university}}</td>
 					<td>{{value.degree}}</td>
 					<td>{{value.program}}</td>
+					<td>{{value.year_joined}}</td>
+					<td>{{value.year_graduated}}</td>
+					<td class="rate">{{"*".repeat(value.rating)}}</td>
+					<!-- <div class="my-raing"></div> -->
 				</tr>
 			</table>
 		</div>
 	</div>
-
 	<footer>This is the footer</footer>
+	<!-- <script type="text/javascript">
+		function getStarStudents(){
+			var scope = angular.element($("#all_students")).scope();
+			scope.students.forEach(function(key){
+				$(".my-raing").starRating({
+				  totalStars: 5,
+				  emptyColor: 'lightgray',
+				  activeColor: 'yellow',
+				  initialRating: key.rating,
+				  strokeWidth: 0,
+				  useGradient: false,
+				  readOnly: true
+				});
+			});
+			scope.$apply();
+		}
+	</script> -->
 </div>
