--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,13 @@
 tr {
 	cursor: pointer;
 }
+
+/*div {
+	padding-top: 5px;
+	padding-bottom: 5px;
+}*/
+
+.rate {
+	font-size: 2em;
+	color: red;
+}
