--- a/app/components/profile/profileView.html
+++ b/app/components/profile/profileView.html
@@ -1,9 +1,9 @@
 <div class="container" id="profile">
 	<div class="row" style="padding-top: 20px">
 		<div class="col-md-10"><h3>Welcome to Scholar Strategy Review</h3></div>
-		<div class="col-md-1" ng-click="change_show(true)" ng-hide="user.show"><button class="btn btn-primary">Show Profile</button></div>
-		<div class="col-md-1" ng-click="change_show(false)" ng-show="user.show"><button class="btn btn-warning">Hide Profile</button></div>
-		<div class="col-md-1" ng-click="profile_signOut()"><button class="btn btn-danger">Sign Out</button></div>
+		<div class="col-md-1 pad" ng-click="change_show(true)" ng-hide="user.show"><button class="btn btn-primary">Show Profile</button></div>
+		<div class="col-md-1 pad" ng-click="change_show(false)" ng-show="user.show"><button class="btn btn-warning">Hide Profile</button></div>
+		<div class="col-md-1 pad" ng-click="profile_signOut()"><button class="btn btn-danger">Sign Out</button></div>
 	</div>
 
 	<h3>General Information</h3>
@@ -112,7 +112,7 @@
 	</div> -->	
 
 		
-	<footer>This is the footer</footer>
+	<!-- <footer>This is the footer</footer> -->
 	<script type="text/javascript">
 		function getStar(){
 			var scope = angular.element($("#profile")).scope();
