--- a/app/components/students/studentView.html
+++ b/app/components/students/studentView.html
@@ -49,7 +49,7 @@
 			</table>
 		</div>
 	</div>
-	<footer>This is the footer</footer>
+	<!-- <footer>This is the footer</footer> -->
 	<!-- <script type="text/javascript">
 		function getStarStudents(){
 			var scope = angular.element($("#all_students")).scope();
