--- a/app/components/info/infoView.html
+++ b/app/components/info/infoView.html
@@ -28,7 +28,7 @@
 			<label>University</label>
 		</div>
 		<div class="col-md-9">
-			<input type="text" name="{{university}}" ng-model="user['university']">
+			<input type="text" name="{{university}}" ng-model="user['university']" disabled>
 		</div>
 	</div>
 	<br>
@@ -37,7 +37,7 @@
 			<label>Degree</label>
 		</div>
 		<div class="col-md-9">
-			<select ng-model="user['degree']">
+			<select ng-model="user['degree']" disabled>
 				<option ng-repeat="degree in degrees">{{degree}}</option>
 			</select>
 		</div>
@@ -48,7 +48,7 @@
 			<label>Program</label>
 		</div>
 		<div class="col-md-9">
-			<select ng-model="user['program']">
+			<select ng-model="user['program']" disabled>
 				<option ng-repeat="program in programs">{{program}}</option>
 			</select>
 		</div>
@@ -59,7 +59,7 @@
 			<label>Year Joined</label>
 		</div>
 		<div class="col-md-9">
-			<select ng-model="user['year_joined']">
+			<select ng-model="user['year_joined']" disabled>
 				<option ng-repeat="year in years">{{year}}</option>
 			</select>
 		</div>
@@ -70,7 +70,7 @@
 			<label>Year Graduted</label>
 		</div>
 		<div class="col-md-9">
-			<select ng-model="user['year_graduated']">
+			<select ng-model="user['year_graduated']" disabled>
 				<option ng-repeat="year in years">{{year}}</option>
 			</select>
 		</div>
@@ -88,7 +88,7 @@
 			<label>Review</label>
 		</div>
 		<div class="col-md-9">
-			<textarea rows="10" class="form-control" ng-model="user['review']"></textarea>
+			<textarea rows="10" class="form-control" ng-model="user['review']" disabled></textarea>
 		</div>
 	</div>
 	<br>
