commit in between to save, review and profile page working

--- a/app/components/profile/profileView.html
+++ b/app/components/profile/profileView.html
@@ -1,18 +1,18 @@
 <div class="container" id="profile">
 	<div class="row" style="padding-top: 20px">
 		<div class="col-md-10"><h3>Welcome to Scholar Strategy Review</h3></div>
-		<div class="col-md-1 pad" ng-click="change_show(true)" ng-hide="user.show"><button class="btn btn-primary">Show Profile</button></div>
-		<div class="col-md-1 pad" ng-click="change_show(false)" ng-show="user.show"><button class="btn btn-warning">Hide Profile</button></div>
+		<div class="col-md-1 pad" ng-click="back()"><button class="btn btn-info">Back</button></div>
 		<div class="col-md-1 pad" ng-click="profile_signOut()"><button class="btn btn-danger">Sign Out</button></div>
 	</div>
 
-	<h3>General Information</h3>
+	<!-- <h3 class="align_center">Profile</h3> -->
+	<br><br>
 	<div class="row">
 		<div class="col-md-3">
 			<label>First Name</label>
 		</div>
-		<div class="col-md-9">
-			<input type="text" name="{{firstname}}" ng-model="user['firstname']" disabled>
+		<div class="col-md-4">
+			<input class="form-control"  type="text" name="{{firstname}}" ng-model="user['firstname']" disabled>
 		</div>
 	</div>
 	<br>
@@ -20,117 +20,36 @@
 		<div class="col-md-3">
 			<label>Last Name</label>
 		</div>
-		<div class="col-md-9">
-			<input type="text" name="{{lastname}}" ng-model="user['lastname']" disabled>
+		<div class="col-md-4">
+			<input class="form-control" type="text" name="{{lastname}}" ng-model="user['lastname']" disabled>
 		</div>
 	</div>
 	<br>
 	<div class="row">
 		<div class="col-md-3">
-			<label>University</label>
+			<label>LinkedIn</label>
 		</div>
-		<div class="col-md-9">
-			<input type="text" name="{{university}}" ng-model="user['university']">
+		<div class="col-md-6">
+			<input class='form-control' type="text" name="{{linkedin}}" ng-model="user['linkedin']" placeholder="https://www.linkedin.com/in/example">
 		</div>
 	</div>
 	<br>
 	<div class="row">
 		<div class="col-md-3">
-			<label>Degree</label>
+			<label>Status<span style="color:red">*</span></label>
 		</div>
-		<div class="col-md-9">
-			<select ng-model="user['degree']">
-				<option ng-repeat="degree in degrees">{{degree}}</option>
+		<div class="col-md-2">
+			<select ng-model="user['status']" class="form-control">
+				<option ng-repeat="status in user_status">{{status}}</option>
 			</select>
 		</div>
 	</div>
 	<br>
 	<div class="row">
-		<div class="col-md-3">
-			<label>Program</label>
-		</div>
-		<div class="col-md-9">
-			<select ng-model="user['program']">
-				<option ng-repeat="program in programs">{{program}}</option>
-			</select>
-		</div>
-	</div>
-	<br>
-	<div class="row">
-		<div class="col-md-3">
-			<label>Year Joined</label>
-		</div>
-		<div class="col-md-9">
-			<select ng-model="user['year_joined']">
-				<option ng-repeat="year in years">{{year}}</option>
-			</select>
-		</div>
-	</div>
-	<br>
-	<div class="row">
-		<div class="col-md-3">
-			<label>Year Graduted</label>
-		</div>
-		<div class="col-md-9">
-			<select ng-model="user['year_graduated']">
-				<option ng-repeat="year in years">{{year}}</option>
-			</select>
-		</div>
-	</div>
-	<br>
-	<div class="row">
-		<div class="col-md-3">
-			<label>Star Rating</label>
-		</div>
-		<div class="col-md-9 my-rating-4"></div>
-	</div>
-	<br>
-	<div class="row">
-		<div class="col-md-3">
-			<label>Review</label>
-		</div>
-		<div class="col-md-9">
-			<textarea rows="10" class="form-control" ng-model="user['review']"></textarea>
-		</div>
-	</div>
-	<br>
-	<div class="row">
-		<div class="col-md-1 pull-right">
+		<div class="col-md-offset-3 col-md-1">
 			<button class="btn btn-primary" ng-click="save()">Save</button>
 		</div>
-	</div>
-	<hr>
+	</div>	
 
-	<!-- <h3>Education</h3>
-	<div class="row" ng-repeat="item in general_list track by $index">
-		<div class=col-md-3>
-			<label>{{general_names[$index]}}</label>
-		</div>
-		<div class=col-md-9>
-			<input type="textarea" name="{{item}}" ng-model="user[item]" disabled>
-		</div>
-	</div> -->	
-
-		
 	<!-- <footer>This is the footer</footer> -->
-	<script type="text/javascript">
-		function getStar(){
-			var scope = angular.element($("#profile")).scope();
-			$(".my-rating-4").starRating({
-			  totalStars: 5,
-			  emptyColor: 'lightgray',
-			  hoverColor: 'salmon',
-			  activeColor: 'salmon',
-			  disableAfterRate: false,
-			  initialRating: scope.user.rating,
-			  strokeWidth: 0,
-			  useGradient: false,
-			  callback: function(currentRating, $el){
-			    // alert('rated ' + currentRating);
-			    // console.log('DOM element ', $el);
-			    scope.user.rating = currentRating;
-			  }
-			});
-		}
-	</script>
 </div>
