--- a/app/components/students/studentView.html
+++ b/app/components/students/studentView.html
@@ -1,7 +1,8 @@
 <div class="container" id="all_students">
 	<div class="row" style="padding-top: 20px">
-		<div class="col-md-10"><h3>Welcome to Scholar Strategy Review</h3></div>
-		<div class="col-md-1" ng-click="edit()"><button class="btn btn-primary">Edit Profile</button></div>
+		<div class="col-md-8"><h3>Welcome to Scholar Strategy Review</h3></div>
+		<div class="col-md-1"><button class="btn btn-info" ng-click="review()">Add/Edit Review</button></div>
+		<div class="col-md-offset-1 col-md-1"><button ng-click="edit()" class="btn btn-primary">Profile</button></div>
 		<div class="col-md-1" ng-click="student_signOut()"><button class="btn btn-danger">Sign Out</button></div>
 	</div>
 	<div class="row">
